<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/battery"
            android:layout_margin="10dp"
            android:layout_width="120dp"
            android:layout_gravity="right"
            android:text="Battery: ---"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/connectBtn"
            android:text="@string/connect_to_device"
            android:layout_marginTop="50dp"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/stopScanBtn"
            android:text="@string/stop"
            android:layout_marginTop="50dp"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/disconnectBtn"
            android:text="@string/disconnect"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/startTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_test"/>

            <TextView
                android:id="@+id/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="3"/>

            <Button
                android:id="@+id/minusFrequency"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:text="-"/>

            <Button
                android:id="@+id/plusFrequency"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:text="+"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready_to_scan"
            android:id="@+id/statusLabel"
            android:textColor="@color/grey"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showPlotBtn"
            android:text="@string/show_plot_with_data"/>


    </LinearLayout>

</RelativeLayout>
