<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Start" />

    <RelativeLayout
        android:id="@+id/rlIndicators"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvSleep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Sleep"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvDeepRelaxation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Deep\nrelaxation"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvRelaxation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Relaxation"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvNormalActivation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Normal\nactivation"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvExcitement"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Excitement"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvDeepExcitement"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Deep\nexcitement"
                android:textSize="11sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:text="Stress: 0%"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stressTextView"/>

    <TextView
        android:text="Attention: 0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/attentionTextView"/>

    <TextView
        android:text="Productive relax: 0%"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relaxTextView"/>

    <TextView
        android:text="Meditation: 0%"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meditationTextView"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/green"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/green"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/yellow"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/yellow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/red1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red1"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/red1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/red2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red2"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/red2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>